a100Output/slurmOutputs/oldOuts/slurm-29143358.out
==============================================
Hostname: fg4
Job ID: 29143358
Node: fg4
  File "DAFTTrain.py", line 54
    model = DAFT(
    ^
IndentationError: unexpected indent
==============================================
Start: 2024-04-13 01:34:35
End: 2024-04-13 01:34:36
